--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@ section{
         & h3{
             flex-basis: 100%;
             margin: 1%;
+            font-size: 1.3em;
         }
     }
     & .item{
