--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,6 @@
 @import '_reset.scss';
 @import '_colors.scss';
 @import '_barmenu.scss';
-$headerfooterHeight:10vh;
-header,footer{
-    height: $headerfooterHeight;
-    background-color: $mainColor;
-    color:$fontColor;
-}
 section{
     overflow: auto;
     background-color: $secondColor;
@@ -24,23 +18,5 @@ section{
             font-size: 1.3em;
         }
     }
-    & .item{
-        border:thin solid;
-        position: relative;
-        display: flex;
-        cursor: pointer;
-        & p{
-            max-width: 200px;
-            width: 100%;
-            padding:2%;
-            position: absolute;
-            bottom: 0;
-            background-color: $mainColor;
-            color:$secondColor;
-        }
-        & img{
-            width: 200px;
-            height: 250px;
-        }
-    }
+    @import '_item.scss';
 }
