--- a/src/scss/details.scss
+++ b/src/scss/details.scss
@@ -22,3 +22,51 @@ article{
         }
     }
 }
+#show{
+    background-color: $mainColor;
+    color:$secondColor;
+    display: inline-block;
+    padding: .5%;
+    cursor: pointer;
+    margin: 1%;
+}
+
+button{
+    font-size: 1.5em;
+    padding: .5% 2%;
+    margin: 0 2%;
+    cursor: pointer;
+    background-color: $mainColor;
+    color:$secondColor;
+    border: none;
+    transition: .25s;
+    &:hover{
+        background-color: $secondColor;
+        color:$mainColor;
+    }
+}
+form{
+    margin: 0 auto;
+    padding: 2%;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    & p{
+        margin:1%;
+    }
+    & label {
+        display: flex;
+        justify-content: space-between;
+    }
+    & button{
+        margin:2%;
+        font-size: 1em;
+    }
+}
+h1{
+    padding: 2%;
+    font-size: 2em;
+}
+strong{
+    color: red;
+}
