retoque en la barra de menu

--- a/src/scss/statistics.scss
+++ b/src/scss/statistics.scss
@@ -12,6 +12,7 @@ label{
     padding: 1%;
     background-color: $mainColor;
     color:$secondColor;
+    cursor: pointer;
 }
 svg>rect{
     fill:$secondColor;
